Working Network with Websockets

--- a/engine.cfg
+++ b/engine.cfg
@@ -3,15 +3,17 @@ fps=true
 [application]
 
 name="Factions RPG"
-main_scene="res://main.tscn"
+main_scene="res://main_menu.tscn"
 boot_splash="res://ui/splash.png"
 icon="icon.png"
 
 [display]
 
-width=1920
-height=1080
-fullscreen=true
+fullscreen=false
+width=1300
+height=950
+stretch_mode="disabled"
+stretch_aspect="ignore"
 
 [input]
 
